# grammar

./: .coveragerc  .gitignore  LICENCE  README.md  justfile  pyproject.toml  requirements.txt  robot.toml
documentation/config/: README.md
documentation/config/Models/: EnumGrammarLabel.md  ProgrammeAssetGrammar.md  ProgrammeConfig.md  ProgrammePaths.md
examples/: README.md  example.py  example_open_source.py
src/: package.py
src/r_open_grammar/assets/: formal_language.lark
src/r_open_grammar/core/: log.py  timer.py
src/r_open_grammar/models/: config-schema.yaml
src/r_open_grammar/models/config/: __init__.py
src/r_open_grammar/parsers/: methods.py
src/r_open_grammar/setup/: __init__.py  assets.py  cli.py  config.py
tests/integration/: sandbox.robot  tests.robot
tests/integration/core/: utils.resource
tests/test_r_open_grammar/: conftest.py  tests_sandbox.py
